Clean up Qodana findings in ANTLR tasks